Fixed clubs main pic category too low

--- a/main.css
+++ b/main.css
@@ -27,6 +27,10 @@ asscock:hover {
     text-decoration: none;
 }
 
+.col-p-9 .news-cat {
+    bottom: 7px;
+}
+
 
 
 /*
